<resources>
    <string name="app_name">WormholeWallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="input_seed">Enter mnemonic phrases</string>
    <string name="set_password">Set Password</string>
    <string name="repeat_password">Verify password</string>
    <string name="read_tip">I have read and agreed </string>
    <string name="service_protocol">Service protocol,</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="i_remember">I got it</string>
    <string name="my_balance">Balance</string>
    <string name="enter_password_tip">Please enter your password</string>
    <string name="password_error_tip">Password invalid,Please check them and try again</string>
    <string name="current_addr">Current Address</string>
    <string name="history_record">History</string>
    <string name="recieve">Receive</string>
    <string name="send">Send</string>
    <string name="create_wallet">Create</string>
    <string name="create_wallet_title">Create Wallet</string>
    <string name="my_wallet">My Wallet</string>
    <string name="import_wallet">Import</string>
    <string name="decode_qr_code_failed">QR code validate failed</string>
    <string name="send_addr">Address:</string>
    <string name="receive_addr">Receive Address</string>
    <string name="send_amount">Transfer Amount</string>
    <string name="comment">Note</string>
    <string name="miner_fee">Fee Rate（BCH/KB）</string>
    <string name="confirm">Confirm</string>
    <string name="cancle">Cancel</string>
    <string name="confirmed">Confirmed</string>
    <string name="invaliad">Not Available</string>
    <string name="slow">Slow</string>
    <string name="overview_all">All Token</string>
    <string name="send_all">Transfer All</string>
    <string name="fund">Assets</string>
    <string name="overview_valiad_crowd">Crowdsale</string>
    <string name="middle">Normal</string>
    <string name="quick">Fast</string>
    <string name="publish_addr">Issuer:</string>
    <string name="first_catogory">Category:</string>
    <string name="token_amount">Number of tokens:</string>
    <string name="deadline">Deadline Time:</string>
    <string name="deadline_time_no_colon">Deadline Time</string>
    <string name="need_scheme">Need contain http or https</string>
    <string name="deadline_no_colon">Deadline Date</string>
    <string name="percent_whc"> Rates(tokens/whc):</string>
    <string name="second_catogory">SubCategory：</string>
    <string name="precision">Precision：</string>
    <string name="early_bonus">Early Bird Bonus(%)：</string>
    <string name="token_sold">Purchase Tokens：</string>
    <string name="join_crowd">Participate Crowdsale</string>
    <string name="join_crowd_no_colon">Participate</string>
    <string name="tx_history">Transaction Record：</string>
    <string name="tx_percent">Rates(tokens/whc)：</string>
    <string name="pay_amount">Purchase Amount(WHC)：</string>
    <string name="pay_amount_no_colon">Purchase Amount(WHC)</string>
    <string name="create_managable_fund">Create Managed Token</string>
    <string name="create_fix_amount_fund">Create Fixed Token</string>
    <string name="create_crowd_fund">Create Crowdsale</string>
    <string name="name">Name</string>
    <string name="fund_desc">Token Describe</string>
    <string name="fund_url">Token Url</string>
    <string name="public_amount">Issuance Amount</string>
    <string name="percent_whc_no_colon">Rates(tokens/whc)</string>
    <string name="fee">Gas Fee:1 whc</string>
    <string name="token_price">Rates(tokens/whc)</string>
    <string name="operate_fund">Assets Operate</string>
    <string name="balance">Balance</string>
    <string name="change_publisher">Change Issuer</string>
    <string name="air_drop_addr">Target token id</string>
    <string name="air_drop_amount">Airdrop Count</string>
    <string name="air_seo_amount">Grant Count</string>
    <string name="destroy_amount">Revoke Count</string>
    <string name="tx_history_no_colon">Transaction records</string>
    <string name="notice_center">Notifications</string>
    <string name="update_checking">Upgrading. Hang on……</string>
    <string name="has_new_version">There is a new version：</string>
    <string name="is_newest_version">It is already the latest version</string>
    <string name="system_language">Language</string>
    <string name="change_pwd">Change Password</string>
    <string name="user_agreement">User Agreement</string>
    <string name="priviva_title">Privacy policy</string>
    <string name="about_us">About</string>
    <string name="tx_successed">Please examine the unconfirmed transaction in history</string>
    <string name="tx_center">Transaction Center</string>
    <string name="base_setting">Setting</string>
    <string name="others">Others</string>
    <string name="system_msg">Notification</string>
    <string name="tx_msg">Transaction News</string>
    <string name="update_Go">Version Upgrade</string>
    <string name="burn_amount">Burning Amount</string>
    <string name="is_newest_version_now">It is already the latest version</string>
    <string name="backup_tip">Please copy mnemonic phrases in safaty place in order, and do not save it in net</string>
    <string name="enter_seed_tip">Please enter the copied mnemonic phrases below in order.</string>
    <string name="password_hint">At least eight digits, letters, numbers, symbols at least two</string>
    <string name="please_enter_correct_pwd">Password format error!</string>
    <string name="pwd_not_match">Double password input inconsistency</string>
    <string name="all_need_enter">Fill in all entries</string>
    <string name="neet_user_aggrement">Please agreeing user agreement</string>
    <string name="screen_shot_tip">Taking screenshot is not allowed. Note if there are cameras around </string>
    <string name="write_word_tip">Please write down the mnemonic phrases to safe place.</string>
    <string name="save_seed_tip">Wormhole wallet will not undertake the risk of assets loss caused by users’ losing, revoking, etc.</string>
    <string name="what_happen_no_seed">What will happen if you do not backup mnemonic phrases?</string>
    <string name="enter_correctly_seed">Mnemonic phrases not match</string>
    <string name="seed_error_tip">Please enter 12 mnemonic phrases to box in order</string>
    <string name="enter_need_first">Please enter required information</string>
    <string name="addr_invaliad">Invalid Address</string>
    <string name="amount_invaliad">Amount should be greater than zero</string>
    <string name="fee_invaliad">Higher Fee rates</string>
    <string name="fund_fixed">Fixed Token</string>
    <string name="fund_crowd">Crowdsale</string>
    <string name="fund_detail">Token Details</string>
    <string name="fund_managable">Managed Token</string>

    <array name="tab_main_title">
        <item>Home</item>
        <item>Explorer</item>
        <item>Assets</item>
        <item>Account</item>
    </array>

    <string name="copy_already">The address has been copied </string>
    <string name="press_more_exit">Please press again to exit</string>
    <string name="fund_create">Create Token</string>
    <string name="fund_fixed_create">Create Fixed Token</string>
    <string name="fund_crowd_create">Create Crowdsale Token</string>
    <string name="fund_managable_craete">Create Managed Token</string>
    <string name="create_or_import_wallet">Create or import your wallet</string>
    <string name="burn">Burn</string>
    <string name="change_success">Modify Success</string>
    <string name="no_msg">No Data</string>
    <string name="net_error_tip">Something wrong with your network</string>
    <string name="request_error_tip">Request error, please try again later</string>
    <string name="tx_failed_retry">The transaction failed. Please try again later</string>
    <string name="retry_fetch">Try again</string>
    <string name="seed_tip1">Your password will not be stored and will not be recovered in the event of loss.</string>
    <string name="pwd_tip1">It is important that passwords are used to protect the private key and the intensity of the transaction authorization</string>
    <string name="tx_detail">Transaction Detail</string>
    <string name="url_format_error">token url format error</string>
    <string name="new_version_published">New version released</string>
    <string name="update_now">Now Upgrade</string>
    <string name="no_timestamp">No Timestamp</string>
    <string name="later_say">Later Update</string>
    <string name="airdrop_fund">Airdrop Token</string>
    <string name="seo_fund">Grant Token</string>
    <string name="destory_fund">Destory Token</string>
    <string name="close_crowd">Clost Token</string>
    <string name="update_version">Version Update</string>

    <string name="seed_num_error">Seed num must be 12!</string>
    <string name="seed_not_contain">Seed not in wormhole wordlist!</string>
    <string name="look_seed">Mnemonic Phrases</string>
    <string name="burn_hint">Burn amount must greater than 1</string>
    <string name="toast_header_synchnizing">Block header is synchronizing, if failed please try later!</string>
    <string name="toast_bch_tx_start">Transaction sended please wait for result!</string>
    <string name="owner_addr">Owner addr</string>
    <string name="fund_id">Fund id</string>

</resources>
