<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whc.com.whc_wallet.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="312px"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nameIv"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_marginLeft="60px"
                android:background="@drawable/create_icons_wallet_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:gravity="center_vertical"
                android:text="@string/wallet_name"
                android:textSize="42px" />
        </LinearLayout>

        <EditText
            android:id="@+id/walletNameEt"
            android:layout_width="match_parent"
            style="@style/CustomerEditText"
            android:layout_marginTop="18px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570px"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lockIv"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_marginLeft="60px"
                android:background="@drawable/create_icons_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:gravity="center_vertical"
                android:text="@string/set_password"
                android:textSize="42px" />
        </LinearLayout>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passWordEt"
            style="@style/CustomerEditText"
            android:hint="@string/password_hint"
            android:layout_marginTop="18px"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="828px"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_marginLeft="60px"
                style="@style/tipIv"
                android:background="@drawable/create_icons_password2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:gravity="center_vertical"
                style="@style/tipTextV"
                android:text="@string/repeat_password"
                android:textSize="42px" />
        </LinearLayout>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/repeatPwdEt"
            style="@style/CustomerEditText"
            android:layout_marginTop="18px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:layout_marginTop="1107px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:checked="true"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginLeft="60px"
            style="@style/CustomCheckBoxTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:gravity="center_vertical"
            android:text="@string/read_tip"
            android:textSize="42px" />

        <TextView
            android:id="@+id/service_protocol_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:gravity="center_vertical"
            android:text="@string/service_protocol"
            android:textColor="#ff0c66ff"
            android:textSize="42px" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacy_policy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="78px"
        android:gravity="center_vertical"
        android:text="@string/privacy_policy"
        android:layout_marginTop="1180px"
        android:textColor="#ff0c66ff"
        android:textSize="42px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1300px"
        android:layout_marginRight="@dimen/normal_padding"
        android:layout_marginLeft="@dimen/normal_padding"
        android:paddingTop="39px"
        android:paddingLeft="36px"
        android:paddingRight="36px"
        android:background="@drawable/password_tip_bg"
        android:paddingBottom="39px"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd_tip1"
            android:drawableLeft="@drawable/icons_tip"
            android:textColor="#a6aebc"
            android:drawablePadding="24px"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seed_tip1"
            android:textColor="#a6aebc"
            android:drawableLeft="@drawable/icons_tip"
            android:drawablePadding="24px"
            android:layout_marginTop="18px"
            />
    </LinearLayout>
    
    <Button
        android:id="@+id/confirmBtn"
        android:text="@string/confirm"
        style="@style/normalBtn"
        android:layout_marginTop="1690px"
        />

</RelativeLayout>
