<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="whc.com.whc_wallet.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="whc.com.whc_wallet.SplashActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="212px"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nameIv"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_marginLeft="60px"
                    android:background="@drawable/create_icons_wallet_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24px"
                    android:gravity="center_vertical"
                    android:text="@string/wallet_name"
                    android:textSize="42px" />
            </LinearLayout>

            <EditText
                android:id="@+id/walletNameEt"
                style="@style/CustomerEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="18px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57px"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_marginLeft="60px"
                    android:background="@drawable/input_icon_word" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24px"
                    android:gravity="center_vertical"
                    android:text="@string/input_seed"
                    android:textSize="42px" />
            </LinearLayout>

            <MultiAutoCompleteTextView
                android:completionThreshold="2"
                android:id="@+id/showSeedTv"
                android:layout_marginTop="22px"
                android:textColor="#0C66FF"
                tools:text="let it be"
                android:textSize="62px"
                android:paddingRight="90px"
                android:paddingLeft="90px"
                android:paddingTop="80px"
                android:layout_marginRight="60px"
                android:layout_marginLeft="@dimen/normal_padding"
                android:gravity="top"
                android:layout_centerHorizontal="true"
                android:background="@drawable/password_tip_bg"
                android:layout_width="match_parent"
                android:layout_height="567px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57px"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/lockIv"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_marginLeft="60px"
                    android:background="@drawable/create_icons_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24px"
                    android:gravity="center_vertical"
                    android:text="@string/set_password"
                    android:textSize="42px" />
            </LinearLayout>

            <EditText
                android:id="@+id/passWordEt"
                style="@style/CustomerEditText"
                android:layout_marginTop="18px"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58px"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    style="@style/tipIv"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_marginLeft="60px"
                    android:background="@drawable/create_icons_password2" />

                <TextView
                    style="@style/tipTextV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24px"
                    android:gravity="center_vertical"
                    android:text="@string/repeat_password"
                    android:textSize="42px" />
            </LinearLayout>

            <EditText
                android:id="@+id/repeatPwdEt"
                style="@style/CustomerEditText"
                android:layout_marginTop="18px"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:layout_marginTop="57px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                style="@style/CustomCheckBoxTheme"
                android:checked="true"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_marginLeft="60px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:gravity="center_vertical"
                android:text="@string/read_tip"
                android:textSize="42px" />

            <TextView
                android:id="@+id/service_protocol_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:gravity="center_vertical"
                android:text="@string/service_protocol"
                android:textColor="#ff0c66ff"
                android:textSize="42px" />
        </LinearLayout>

        <TextView
            android:id="@+id/privacy_policy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78px"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:layout_marginTop="25px"
            android:textColor="#ff0c66ff"
            android:textSize="42px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginRight="@dimen/normal_padding"
            android:layout_marginTop="58px"
            android:background="@drawable/password_tip_bg"
            android:orientation="vertical"
            android:paddingBottom="39px"
            android:paddingLeft="36px"
            android:paddingRight="36px"
            android:paddingTop="39px">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icons_tip"
                android:drawablePadding="24px"
                android:text="@string/pwd_tip1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:drawableLeft="@drawable/icons_tip"
                android:drawablePadding="24px"
                android:text="@string/seed_tip1" />
        </LinearLayout>

        <Button
            android:id="@+id/confirmBtn"
            style="@style/normalBtn"
            android:layout_marginTop="55px"
            android:text="@string/confirm" />

    </LinearLayout>
</ScrollView>