<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whc.com.whc_wallet.SplashActivity">

    <LinearLayout
        android:layout_width="888px"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="300px"
        android:gravity="center_horizontal"
        android:background="@drawable/dialog_bg">

        <ImageView
            android:layout_width="144px"
            android:layout_height="144px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60px"
            android:background="@drawable/main_icon_lock" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66px"
            android:gravity="center"
            android:text="@string/enter_password_tip"
            android:textColor="#ff0a1f44"
            android:textSize="54px" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/pwdEt"
            style="@style/CustomerEditText"
            android:layout_marginTop="78px"
            />

        <TextView
            android:id="@+id/pwdErrorTv"
            android:visibility="gone"
            android:text="@string/password_error_tip"
            android:layout_marginTop="27px"
            android:paddingLeft="@dimen/normal_padding"
            android:textColor="#F03D3D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/confirmBtn"
            style="@style/normalBtn"
            android:layout_marginTop="75px"
            android:text="@string/confirm" />


    </LinearLayout>

</RelativeLayout>
